fixing a minor alignment and adding custom scroll bar

--- a/Campaign_Funding_DApp/frontend/src/styles.scss
+++ b/Campaign_Funding_DApp/frontend/src/styles.scss
@@ -2,6 +2,24 @@
 //@import url(//fonts.googleapis.com/css?family=Lato:300:400);
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+/* Custom scrollbar for modern browsers */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent; /* Explicit transparent background */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 html,
 body {
   height: 100%;
@@ -11,6 +29,8 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
 }
 
 .content-wrapper {
